--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ language: julia
 julia:
     - 0.4.7
 
+addons:
+    apt:
+        packages:
+            - gfortran
+
+
 install:
     - make install
 
