creating snapshot for 0.0.4

--- a/docker/Dockerfile.env
+++ b/docker/Dockerfile.env
@@ -4,7 +4,7 @@ ENV DEBIAN_FRONTEND noninteractive
 
 RUN mkdir /install-scripts
 
-COPY bin/INSTALL.jl /instsall-scripts/
+COPY bin/INSTALL.jl /install-scripts/
 
 RUN apt-get update -y
 
