--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
       - docker
 
 install:
-      - docker pull oicr/mpbiopath-env:0.0.1
+      - docker pull oicr/mpbiopath-env:0.0.4-SNAPSHOT
 
 script:
     - docker build -t mpbiopath -f docker/Dockerfile.app .
