--- a/docker/Dockerfile.env
+++ b/docker/Dockerfile.env
@@ -16,6 +16,15 @@ RUN add-apt-repository -y ppa:staticfloat/julia-deps
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install build-essential julia gfortran pkg-config wget libnlopt0 unzip -y
 
+# For Julia FactCheck - I think
+RUN apt-get install libfontconfig1 -y
+
+# For Julia Cairo package
+RUN apt-get install gettext -y
+
+# For creating heatmaps
+RUN apt-get install r-base libstatistics-r-perl r-cran-ggplot2 -y
+
 ENV MAKEFLAGS -j4
 
 RUN cd /install-scripts && julia INSTALL.jl;
