moving files around

--- a/docker/Dockerfile.env
+++ b/docker/Dockerfile.env
@@ -4,7 +4,7 @@ ENV DEBIAN_FRONTEND noninteractive
 
 RUN mkdir /install-scripts
 
-COPY bin/INSTALL.jl /install-scripts/
+COPY scripts/INSTALL.jl /scripts/
 
 RUN apt-get update -y
 
@@ -27,4 +27,4 @@ RUN apt-get install r-base libstatistics-r-perl r-cran-ggplot2 -y
 
 ENV MAKEFLAGS -j4
 
-RUN cd /install-scripts && julia INSTALL.jl;
+RUN cd /scripts && julia INSTALL.jl;
