update readme with development docker run command

--- a/docker/Dockerfile.env
+++ b/docker/Dockerfile.env
@@ -25,6 +25,8 @@ RUN apt-get install gettext -y
 # For creating heatmaps
 RUN apt-get install r-base libstatistics-r-perl r-cran-ggplot2 -y
 
+RUN apt-get install vim -y
+
 ENV MAKEFLAGS -j4
 
 RUN cd /scripts && julia INSTALL.jl;
