--- a/docker/Dockerfile.env
+++ b/docker/Dockerfile.env
@@ -23,7 +23,7 @@ RUN apt-get install libfontconfig1 -y
 RUN apt-get install gettext -y
 
 # For creating heatmaps
-RUN apt-get install r-base libstatistics-r-perl r-cran-ggplot2 -y
+RUN apt-get install r-base libstatistics-r-perl r-cran-ggplot2 r-cran-gplots -y
 
 RUN apt-get install vim -y
 
