used createTSVforHeatmap with IDs instead of legacy symbols

--- a/docker/Dockerfile.env
+++ b/docker/Dockerfile.env
@@ -15,7 +15,7 @@ RUN apt-get install software-properties-common -y
 
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install build-essential  gfortran pkg-config wget libnlopt0 unzip -y
-
+RUN apt-get install pkg-config liblapack-dev libblas-dev -y #for IPOpt
 # For Julia FactCheck - I think
 RUN apt-get install libfontconfig1 -y
 
