--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 sudo: required
 
 services:
-      - docker
+    - docker
 
 install:
-      - docker pull oicr/mpbiopath-env:1.0.4-SNAPSHOT
+    - docker pull oicr/mpbiopath-env:1.0.4-SNAPSHOT
 
 script:
-    - docker build -t mpbiopath -f docker/Dockerfile.app .
+    - docker build --no-cache -t oicr/mpbiopath-env:latest -f docker/Dockerfile.env .
+    - docker build -t mpbiopath:latest -f docker/Dockerfile.app .
     - docker run -v ${PWD}:/app -w /app -it oicr/mpbiopath-env:1.0.4-SNAPSHOT julia tests/run.jl
