--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install:
 script:
     - docker build --no-cache -t oicr/mpbiopath-env:latest -f docker/Dockerfile.env .
     - docker build -t mpbiopath:latest -f docker/Dockerfile.app .
-    - docker run -v ${PWD}:/app -w /app -it oicr/mpbiopath-env:1.0.4-SNAPSHOT julia tests/run.jl
+    - docker run -v ${PWD}:/app -w /app -it oicr/mpbiopath:latest julia tests/run.jl
