--- a/tests/conf/or.yaml
+++ b/tests/conf/or.yaml
@@ -8,29 +8,6 @@
 id: testset
 
 # #############################################################################
-# 
-# COIN-OR settings
-#
-# All settings can be found in COIN-OR's documentation:
-# https://github.com/coin-or/Bonmin/blob/master/Bonmin/test/bonmin.opt
-#
-# #############################################################################
-
-coin-options:
-   acceptable_tol: 1e-4
-   tol: 1e-8
-   max_iter: 200
-
-# #############################################################################
-#
-# Model Settings
-#
-# #############################################################################
-
-upperbound: 100
-lowerbound: 0.01
-
-# #############################################################################
 #
 # Expression
 # One set of results will be generated perl tissue type specified.
@@ -54,7 +31,7 @@ lowerbound: 0.01
 #keyoutputs:
 #    - ./data/key_outputs.tsv 
 
-id-map: tests/files/db_id_to_name_mapping_loop_tests.txt
+id-map: tests/files/db_id_to_name_mapping_tests.txt
 
 # #############################################################################
 #
@@ -93,10 +70,8 @@ evidence:
 # Results
 #
 # The generated results will contain several files
-# It is recommended to use a unique folder for each run
-# Options for generate include: "heatmap"
 #
 # #############################################################################
 
-results:
-    directory: tests/files/results/
+outputs:
+    directory: tests/files/outputs/
