changing config file to make it so that there is only one input file

--- a/tests/conf/andneg.yaml
+++ b/tests/conf/andneg.yaml
@@ -60,10 +60,7 @@ pathways:
 #
 # #############################################################################
 
-evidence:
-  dna:
-    genomic: 
-      tests/files/evidence/andneg.tsv
+evidence: tests/files/evidence/andneg.tsv
 
 # #############################################################################
 #
